add coments to future orientations